# activemq-cpp

./: CMakeLists.txt
.github/workflows/: ci.yml  linux.yml  release.yml  windows.yml
activemq-cpp/: CMakeLists.txt  CMakePresets.json  README_CMAKE.md  build-with-vcpkg.sh
activemq-cpp/.github/: copilot-instructions.md
activemq-cpp/cmake/presets/: base.json  linux.json
activemq-cpp/src/examples/: CMakeLists.txt
activemq-cpp/src/main/activemq/: CMakeLists.txt
activemq-cpp/src/main/activemq/core/: ActiveMQConnection.cpp  ActiveMQConnectionFactory.cpp
activemq-cpp/src/main/activemq/transport/failover/: FailoverTransport.cpp
activemq-cpp/src/main/cms/: CMakeLists.txt
activemq-cpp/src/main/decaf/: CMakeLists.txt
activemq-cpp/src/main/decaf/internal/net/ssl/openssl/: OpenSSLContextSpi.cpp
activemq-cpp/src/main/decaf/internal/net/tcp/: TcpSocket.cpp
activemq-cpp/src/main/decaf/internal/util/concurrent/: CustomReentrantLock.h  PlatformDefs.h  PlatformThread.cpp  PlatformThread.h  Threading.cpp  Threading.h  ThreadingTypes.h
activemq-cpp/src/main/decaf/lang/: System.cpp  Thread.cpp  Thread.h
activemq-cpp/src/main/decaf/nio/: CharBuffer.cpp
activemq-cpp/src/main/decaf/util/: Date.cpp  Date.h  Random.cpp
activemq-cpp/src/main/decaf/util/concurrent/: Mutex.cpp
activemq-cpp/src/test/: CMakeLists.txt  main.cpp
activemq-cpp/src/test-benchmarks/: CMakeLists.txt
activemq-cpp/src/test-integration/: CMakeLists.txt
activemq-cpp/src/test-integration/activemq/test/: ExpirationTest.cpp  SlowListenerTest.cpp
activemq-cpp/src/test/activemq/core/: ActiveMQConnectionTest.cpp
activemq-cpp/src/test/activemq/mock/: MockBrokerService.cpp
activemq-cpp/src/test/activemq/transport/failover/: FailoverTransportTest.cpp  FailoverTransportTest.h
activemq-cpp/src/test/decaf/internal/net/: URIHelperTest.cpp
activemq-cpp/src/test/decaf/net/: ServerSocketTest.cpp  SocketTest.cpp  URITest.cpp
activemq-cpp/src/test/decaf/net/ssl/: SSLSocketFactoryTest.cpp
activemq-cpp/src/test/decaf/util/: DateTest.cpp  RandomTest.cpp
activemq-cpp/src/test/decaf/util/concurrent/: MutexTest.cpp
